<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- ###########
         MENU LABELS
         ########### -->

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- ###########
         FORM LABELS
         ########### -->

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for product description  [CHAR LIMIT=30] -->
    <string name="hint_product_description">Description</string>

    <!-- Text hint for product supplier emaill  [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_email">sup. email</string>

    <!-- Text hint for product supplier name  [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_name">sup. name</string>

    <!-- Text hint for quantity increment  [CHAR LIMIT=30] -->
    <string name="hint_product_increment">increment</string>

    <!-- #####
         TEXTS
         ##### -->

    <!-- Header text for empty inventory [CHAR LIMIT=20] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Sub-header text for empty inventory [CHAR LIMIT=20] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- ###############
         ACTIVITY TITLES
         ############### -->

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit a product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- ############
         DIALOG TEXTS
         ############ -->

    <!-- Dialog message to ask the user to confirm discarding the current product [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- ##############
         DIALOG BUTTONS
         ############## -->

    <!-- Dialog button text for the option to discard editing [CHAR LIMIT=20] -->
    <string name="dialog_button_discard">Discard</string>

    <!-- Dialog button text for the option to keep editing [CHAR LIMIT=20] -->
    <string name="dialog_button_keep_editing">Keep Editing</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="dialog_button_delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="dialog_button_cancel">Cancel</string>

    <!-- ##############
         TOAST MESSAGES
         ############## -->

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in inventory when all products have been deleted successfully [CHAR LIMIT=NONE] -->
    <string name="action_delete_all_products_successful">All Products Deleted Successfuly</string>

    <!-- ##############
         MOCK CONTENT
         ############## -->

    <string name="mock_product">Mock Product</string>
    <string name="mock_description">Lorem ipsum dolor sit amet</string>
    <string name="mock_supplier_name">Supplier name</string>
    <string name="mock_suplier_email">supplier@example.com</string>

    <!-- ##############
         ERROR MESSAGES
         ############## -->

    <string name="product_name_required">Product name is required</string>
    <string name="product_description_required">Product description is required</string>
    <string name="product_maximum_quantity">Maximum quantity is</string>
    <string name="product_minimum_quantity">Minimum quantity is</string>
    <string name="product_quantity_required">Product quantity is required</string>
    <string name="product_price_required">Product price is required</string>
    <string name="supplier_name_required">Supplier name is required</string>
    <string name="supplier_email_required">Supplier email is required</string>
    <string name="product_image_required">Product image is required</string>
    <string name="reached_minimum">You have reached the minimum</string>
    <string name="reached_maximum">You have reached the maximum</string>

</resources>
