<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_overview" />

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:gravity="top|center_horizontal"
                android:scaleType="fitStart" />

        </LinearLayout>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <!-- quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity"
                android:inputType="textCapWords" />

            <!-- price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity"
                android:inputType="textCapWords" />

            <!-- supplier name field -->
            <EditText
                android:id="@+id/edit_product_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords" />

            <!-- supplier email field -->
            <EditText
                android:id="@+id/edit_product_supplier_email"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_email"
                android:inputType="textCapWords" />

            <!-- description field -->
            <EditText
                android:id="@+id/edit_product_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:hint="@string/hint_product_description"
                android:inputType="text|textMultiLine" />

            <RelativeLayout
                android:id="@+id/edit_product_browse_gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightGray"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_image"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Add Image"
                    android:textSize="21sp" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
